cdk.out.validate-valkey-version/MsightCloudStack.template.json
{
 "Resources": {
  "MsightVpc52901217": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/Resource"
   }
  },
  "MsightVpcpublicSubnet1Subnet8D2AEF6A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/publicSubnet1/Subnet"
   }
  },
  "MsightVpcpublicSubnet1RouteTable7C10C6A4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/publicSubnet1/RouteTable"
   }
  },
  "MsightVpcpublicSubnet1RouteTableAssociationCFF4810C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MsightVpcpublicSubnet1RouteTable7C10C6A4"
    },
    "SubnetId": {
     "Ref": "MsightVpcpublicSubnet1Subnet8D2AEF6A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "MsightVpcpublicSubnet1DefaultRouteBE8A2A3F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MsightVpcIGW6CD3CBFF"
    },
    "RouteTableId": {
     "Ref": "MsightVpcpublicSubnet1RouteTable7C10C6A4"
    }
   },
   "DependsOn": [
    "MsightVpcVPCGWF01E47B6"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/publicSubnet1/DefaultRoute"
   }
  },
  "MsightVpcpublicSubnet2Subnet7B773FCE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/publicSubnet2/Subnet"
   }
  },
  "MsightVpcpublicSubnet2RouteTableA689EF7A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/publicSubnet2/RouteTable"
   }
  },
  "MsightVpcpublicSubnet2RouteTableAssociation6C7C0BC3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MsightVpcpublicSubnet2RouteTableA689EF7A"
    },
    "SubnetId": {
     "Ref": "MsightVpcpublicSubnet2Subnet7B773FCE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "MsightVpcpublicSubnet2DefaultRoute1EEBD2F0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MsightVpcIGW6CD3CBFF"
    },
    "RouteTableId": {
     "Ref": "MsightVpcpublicSubnet2RouteTableA689EF7A"
    }
   },
   "DependsOn": [
    "MsightVpcVPCGWF01E47B6"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/publicSubnet2/DefaultRoute"
   }
  },
  "MsightVpcappSubnet1Subnet579714B0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "app"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/appSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/appSubnet1/Subnet"
   }
  },
  "MsightVpcappSubnet1RouteTableEC22A40C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/appSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/appSubnet1/RouteTable"
   }
  },
  "MsightVpcappSubnet1RouteTableAssociation95FFAB0C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MsightVpcappSubnet1RouteTableEC22A40C"
    },
    "SubnetId": {
     "Ref": "MsightVpcappSubnet1Subnet579714B0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/appSubnet1/RouteTableAssociation"
   }
  },
  "MsightVpcappSubnet2Subnet1861BDE1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "app"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/appSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/appSubnet2/Subnet"
   }
  },
  "MsightVpcappSubnet2RouteTable06005608": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/appSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/appSubnet2/RouteTable"
   }
  },
  "MsightVpcappSubnet2RouteTableAssociationA75A9726": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MsightVpcappSubnet2RouteTable06005608"
    },
    "SubnetId": {
     "Ref": "MsightVpcappSubnet2Subnet1861BDE1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/appSubnet2/RouteTableAssociation"
   }
  },
  "MsightVpcdbSubnet1Subnet9370D48B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2a",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "db"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/dbSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/dbSubnet1/Subnet"
   }
  },
  "MsightVpcdbSubnet1RouteTableA1CDA7D9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/dbSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/dbSubnet1/RouteTable"
   }
  },
  "MsightVpcdbSubnet1RouteTableAssociation3C41324F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MsightVpcdbSubnet1RouteTableA1CDA7D9"
    },
    "SubnetId": {
     "Ref": "MsightVpcdbSubnet1Subnet9370D48B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/dbSubnet1/RouteTableAssociation"
   }
  },
  "MsightVpcdbSubnet2Subnet85C849FD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-2b",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "db"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/dbSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/dbSubnet2/Subnet"
   }
  },
  "MsightVpcdbSubnet2RouteTable5905BF54": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc/dbSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/dbSubnet2/RouteTable"
   }
  },
  "MsightVpcdbSubnet2RouteTableAssociation1824FE1D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MsightVpcdbSubnet2RouteTable5905BF54"
    },
    "SubnetId": {
     "Ref": "MsightVpcdbSubnet2Subnet85C849FD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/dbSubnet2/RouteTableAssociation"
   }
  },
  "MsightVpcIGW6CD3CBFF": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MsightCloudStack/MsightVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/IGW"
   }
  },
  "MsightVpcVPCGWF01E47B6": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MsightVpcIGW6CD3CBFF"
    },
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/VPCGW"
   }
  },
  "MsightVpcRestrictDefaultSecurityGroupCustomResource380A411A": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "MsightVpc52901217",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "162092913718"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-2:162092913718:security-group/",
             {
              "Fn::GetAtt": [
               "MsightVpc52901217",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-162092913718-us-east-2",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "MsightLambdaSg05C2EDD9": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "MSight Lambda Security Group",
    "GroupName": "msight-lambda-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "MsightVpc52901217",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "MsightVpc52901217",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightLambdaSg/Resource"
   }
  },
  "MsightProxySg5ACE7239": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "MSight RDS Proxy Security Group",
    "GroupName": "msight-proxy-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightProxySg/Resource"
   }
  },
  "MsightProxySgfromMsightCloudStackMsightLambdaSgBD01DFF854327DF8DA13": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Lambda to Proxy",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "MsightProxySg5ACE7239",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "MsightLambdaSg05C2EDD9",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightProxySg/from MsightCloudStackMsightLambdaSgBD01DFF8:5432"
   }
  },
  "MsightDbSgC210D36D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "MSight Aurora PostgreSQL Security Group",
    "GroupName": "msight-db-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightDbSg/Resource"
   }
  },
  "MsightDbSgfromMsightCloudStackMsightProxySgC83EB9705432C631448D": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Proxy to Aurora",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "MsightDbSgC210D36D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "MsightProxySg5ACE7239",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightDbSg/from MsightCloudStackMsightProxySgC83EB970:5432"
   }
  },
  "MsightDbSgfromMsightCloudStackMsightProxySgC83EB970IndirectPort70D9E4B3": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow connections to the database Cluster from the Proxy",
    "FromPort": {
     "Fn::GetAtt": [
      "MsightAuroraE9D0FDC0",
      "Endpoint.Port"
     ]
    },
    "GroupId": {
     "Fn::GetAtt": [
      "MsightDbSgC210D36D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "MsightProxySg5ACE7239",
      "GroupId"
     ]
    },
    "ToPort": {
     "Fn::GetAtt": [
      "MsightAuroraE9D0FDC0",
      "Endpoint.Port"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightDbSg/from MsightCloudStackMsightProxySgC83EB970:{IndirectPort}"
   }
  },
  "MsightCacheSgA971FE4C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "MSight ElastiCache Security Group",
    "GroupName": "msight-cache-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightCacheSg/Resource"
   }
  },
  "MsightCacheSgfromMsightCloudStackMsightLambdaSgBD01DFF863790D0320A5": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Lambda to ElastiCache",
    "FromPort": 6379,
    "GroupId": {
     "Fn::GetAtt": [
      "MsightCacheSgA971FE4C",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "MsightLambdaSg05C2EDD9",
      "GroupId"
     ]
    },
    "ToPort": 6379
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightCacheSg/from MsightCloudStackMsightLambdaSgBD01DFF8:6379"
   }
  },
  "MsightCacheSubnetGroup": {
   "Type": "AWS::ElastiCache::SubnetGroup",
   "Properties": {
    "CacheSubnetGroupName": "msight-cache-subnet-group",
    "Description": "MSight ElastiCache subnet group",
    "SubnetIds": [
     {
      "Ref": "MsightVpcappSubnet1Subnet579714B0"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightCacheSubnetGroup"
   }
  },
  "MsightCacheCluster": {
   "Type": "AWS::ElastiCache::CacheCluster",
   "Properties": {
    "AutoMinorVersionUpgrade": true,
    "CacheNodeType": "cache.t4g.small",
    "CacheSubnetGroupName": {
     "Ref": "MsightCacheSubnetGroup"
    },
    "ClusterName": "msight-cache",
    "Engine": "valkey",
    "EngineVersion": "8.0",
    "NumCacheNodes": 1,
    "Port": 6379,
    "PreferredAvailabilityZone": "us-east-2a",
    "TransitEncryptionEnabled": true,
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "MsightCacheSgA971FE4C",
       "GroupId"
      ]
     }
    ]
   },
   "DependsOn": [
    "MsightCacheSubnetGroup"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightCacheCluster"
   }
  },
  "MsightAuroraSubnets84C92F05": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnets for MsightAurora database",
    "SubnetIds": [
     {
      "Ref": "MsightVpcappSubnet1Subnet579714B0"
     },
     {
      "Ref": "MsightVpcappSubnet2Subnet1861BDE1"
     },
     {
      "Ref": "MsightVpcdbSubnet1Subnet9370D48B"
     },
     {
      "Ref": "MsightVpcdbSubnet2Subnet85C849FD"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightAurora/Subnets/Default"
   }
  },
  "MsightCloudStackMsightAuroraSecret6F39F6763fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"msight_admin\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightAurora/Secret/Resource"
   }
  },
  "MsightAuroraSecretAttachmentD585F689": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "MsightCloudStackMsightAuroraSecret6F39F6763fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "MsightAuroraE9D0FDC0"
    },
    "TargetType": "AWS::RDS::DBCluster"
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightAurora/Secret/Attachment/Resource"
   }
  },
  "MsightAuroraE9D0FDC0": {
   "Type": "AWS::RDS::DBCluster",
   "Properties": {
    "CopyTagsToSnapshot": true,
    "DBClusterParameterGroupName": "default.aurora-postgresql16",
    "DBSubnetGroupName": {
     "Ref": "MsightAuroraSubnets84C92F05"
    },
    "DatabaseName": "msight",
    "DeletionProtection": false,
    "EnableHttpEndpoint": true,
    "Engine": "aurora-postgresql",
    "EngineVersion": "16.4",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "MsightCloudStackMsightAuroraSecret6F39F6763fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "msight_admin",
    "Port": 5432,
    "ServerlessV2ScalingConfiguration": {
     "MaxCapacity": 2,
     "MinCapacity": 0.5
    },
    "StorageEncrypted": true,
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "MsightDbSgC210D36D",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightAurora/Resource"
   }
  },
  "MsightAurorawriterBCE8560A": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "DBClusterIdentifier": {
     "Ref": "MsightAuroraE9D0FDC0"
    },
    "DBInstanceClass": "db.serverless",
    "Engine": "aurora-postgresql",
    "PromotionTier": 0,
    "PubliclyAccessible": false
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightAurora/writer/Resource"
   }
  },
  "MsightProxyIAMRole487FB16A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "rds.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightProxy/IAMRole/Resource"
   }
  },
  "MsightProxyIAMRoleDefaultPolicyBA5258E9": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "secretsmanager:DescribeSecret",
        "secretsmanager:GetSecretValue"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "MsightAuroraSecretAttachmentD585F689"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MsightProxyIAMRoleDefaultPolicyBA5258E9",
    "Roles": [
     {
      "Ref": "MsightProxyIAMRole487FB16A"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightProxy/IAMRole/DefaultPolicy/Resource"
   }
  },
  "MsightProxyF785E2DA": {
   "Type": "AWS::RDS::DBProxy",
   "Properties": {
    "Auth": [
     {
      "AuthScheme": "SECRETS",
      "IAMAuth": "DISABLED",
      "SecretArn": {
       "Ref": "MsightAuroraSecretAttachmentD585F689"
      }
     }
    ],
    "DBProxyName": "msight-proxy",
    "EngineFamily": "POSTGRESQL",
    "RequireTLS": true,
    "RoleArn": {
     "Fn::GetAtt": [
      "MsightProxyIAMRole487FB16A",
      "Arn"
     ]
    },
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "MsightProxySg5ACE7239",
       "GroupId"
      ]
     }
    ],
    "VpcSubnetIds": [
     {
      "Ref": "MsightVpcappSubnet1Subnet579714B0"
     },
     {
      "Ref": "MsightVpcappSubnet2Subnet1861BDE1"
     },
     {
      "Ref": "MsightVpcdbSubnet1Subnet9370D48B"
     },
     {
      "Ref": "MsightVpcdbSubnet2Subnet85C849FD"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightProxy/Resource"
   }
  },
  "MsightProxyProxyTargetGroup0F2248DB": {
   "Type": "AWS::RDS::DBProxyTargetGroup",
   "Properties": {
    "ConnectionPoolConfigurationInfo": {},
    "DBClusterIdentifiers": [
     {
      "Ref": "MsightAuroraE9D0FDC0"
     }
    ],
    "DBProxyName": {
     "Ref": "MsightProxyF785E2DA"
    },
    "TargetGroupName": "default"
   },
   "DependsOn": [
    "MsightAuroraE9D0FDC0",
    "MsightAurorawriterBCE8560A"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightProxy/ProxyTargetGroup"
   }
  },
  "SecretsManagerVpcEndpoint43ED3596": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "MsightLambdaSg05C2EDD9",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-2.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "MsightVpcappSubnet1Subnet579714B0"
     },
     {
      "Ref": "MsightVpcappSubnet2Subnet1861BDE1"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "MsightVpc52901217"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/SecretsManagerVpcEndpoint/Resource"
   }
  },
  "LocationLambdaServiceRole69544B5B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/LocationLambda/ServiceRole/Resource"
   }
  },
  "LocationLambdaServiceRoleDefaultPolicy08CD52DD": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "secretsmanager:DescribeSecret",
        "secretsmanager:GetSecretValue"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "MsightAuroraSecretAttachmentD585F689"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "LocationLambdaServiceRoleDefaultPolicy08CD52DD",
    "Roles": [
     {
      "Ref": "LocationLambdaServiceRole69544B5B"
     }
    ]
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/LocationLambda/ServiceRole/DefaultPolicy/Resource"
   }
  },
  "LocationLambda0E7B39F0": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-162092913718-us-east-2",
     "S3Key": "a4fe46f5b3a49546fc8e573f710c84cdc95e77885306ff2058b9056560a57b96.zip"
    },
    "Environment": {
     "Variables": {
      "API_VERSION": "v1",
      "SERVICE_NAME": "location-api",
      "BUILD_ID": "f7db69427dc8",
      "DB_HOST": {
       "Fn::GetAtt": [
        "MsightProxyF785E2DA",
        "Endpoint"
       ]
      },
      "DB_PORT": "5432",
      "DB_NAME": "msight",
      "DB_USER": "msight_admin",
      "DB_SECRET_ARN": {
       "Ref": "MsightAuroraSecretAttachmentD585F689"
      }
     }
    },
    "Handler": "index.handler",
    "MemorySize": 256,
    "Role": {
     "Fn::GetAtt": [
      "LocationLambdaServiceRole69544B5B",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Timeout": 10,
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "MsightLambdaSg05C2EDD9",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "MsightVpcappSubnet1Subnet579714B0"
      },
      {
       "Ref": "MsightVpcappSubnet2Subnet1861BDE1"
      },
      {
       "Ref": "MsightVpcdbSubnet1Subnet9370D48B"
      },
      {
       "Ref": "MsightVpcdbSubnet2Subnet85C849FD"
      }
     ]
    }
   },
   "DependsOn": [
    "LocationLambdaServiceRoleDefaultPolicy08CD52DD",
    "LocationLambdaServiceRole69544B5B",
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/LocationLambda/Resource",
    "aws:asset:path": "asset.a4fe46f5b3a49546fc8e573f710c84cdc95e77885306ff2058b9056560a57b96",
    "aws:asset:is-bundled": true,
    "aws:asset:property": "Code"
   }
  },
  "LocationLambdaLogGroup3E955026": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": {
     "Fn::Join": [
      "",
      [
       "/aws/lambda/",
       {
        "Ref": "LocationLambda0E7B39F0"
       }
      ]
     ]
    },
    "RetentionInDays": 731
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/LocationLambda/LogGroup/Resource"
   }
  },
  "SystemLambdaServiceRole9C559CC5": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/SystemLambda/ServiceRole/Resource"
   }
  },
  "SystemLambda52589B81": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-162092913718-us-east-2",
     "S3Key": "d149a087c03cd723d77723e5db0381d9c5428719437a403967fa0351739fdbef.zip"
    },
    "Environment": {
     "Variables": {
      "API_VERSION": "v1",
      "SERVICE_NAME": "system-api",
      "BUILD_ID": "f7db69427dc8"
     }
    },
    "Handler": "index.handler",
    "MemorySize": 256,
    "Role": {
     "Fn::GetAtt": [
      "SystemLambdaServiceRole9C559CC5",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Timeout": 10,
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "MsightLambdaSg05C2EDD9",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "MsightVpcappSubnet1Subnet579714B0"
      },
      {
       "Ref": "MsightVpcappSubnet2Subnet1861BDE1"
      },
      {
       "Ref": "MsightVpcdbSubnet1Subnet9370D48B"
      },
      {
       "Ref": "MsightVpcdbSubnet2Subnet85C849FD"
      }
     ]
    }
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D",
    "SystemLambdaServiceRole9C559CC5"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/SystemLambda/Resource",
    "aws:asset:path": "asset.d149a087c03cd723d77723e5db0381d9c5428719437a403967fa0351739fdbef",
    "aws:asset:is-bundled": true,
    "aws:asset:property": "Code"
   }
  },
  "SystemLambdaLogGroup4C5087E0": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": {
     "Fn::Join": [
      "",
      [
       "/aws/lambda/",
       {
        "Ref": "SystemLambda52589B81"
       }
      ]
     ]
    },
    "RetentionInDays": 731
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/SystemLambda/LogGroup/Resource"
   }
  },
  "LatencyLambdaServiceRole5CCB6A7D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/LatencyLambda/ServiceRole/Resource"
   }
  },
  "LatencyLambda7BA03A7D": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-162092913718-us-east-2",
     "S3Key": "d5826f8382341df926bf4602b93a7ddc913201defbe9fb0b7c7f05d1846d2dc4.zip"
    },
    "Environment": {
     "Variables": {
      "API_VERSION": "v1",
      "SERVICE_NAME": "latency-api",
      "BUILD_ID": "f7db69427dc8"
     }
    },
    "Handler": "index.handler",
    "MemorySize": 256,
    "Role": {
     "Fn::GetAtt": [
      "LatencyLambdaServiceRole5CCB6A7D",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Timeout": 10,
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "MsightLambdaSg05C2EDD9",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "MsightVpcappSubnet1Subnet579714B0"
      },
      {
       "Ref": "MsightVpcappSubnet2Subnet1861BDE1"
      },
      {
       "Ref": "MsightVpcdbSubnet1Subnet9370D48B"
      },
      {
       "Ref": "MsightVpcdbSubnet2Subnet85C849FD"
      }
     ]
    }
   },
   "DependsOn": [
    "LatencyLambdaServiceRole5CCB6A7D",
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/LatencyLambda/Resource",
    "aws:asset:path": "asset.d5826f8382341df926bf4602b93a7ddc913201defbe9fb0b7c7f05d1846d2dc4",
    "aws:asset:is-bundled": true,
    "aws:asset:property": "Code"
   }
  },
  "LatencyLambdaLogGroup67D7589C": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": {
     "Fn::Join": [
      "",
      [
       "/aws/lambda/",
       {
        "Ref": "LatencyLambda7BA03A7D"
       }
      ]
     ]
    },
    "RetentionInDays": 731
   },
   "DependsOn": [
    "MsightVpcappSubnet1RouteTableAssociation95FFAB0C",
    "MsightVpcappSubnet2RouteTableAssociationA75A9726",
    "MsightVpcdbSubnet1RouteTableAssociation3C41324F",
    "MsightVpcdbSubnet2RouteTableAssociation1824FE1D"
   ],
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/LatencyLambda/LogGroup/Resource"
   }
  },
  "MsightHttpApiD0A50F1B": {
   "Type": "AWS::ApiGatewayV2::Api",
   "Properties": {
    "CorsConfiguration": {
     "AllowHeaders": [
      "content-type",
      "authorization"
     ],
     "AllowMethods": [
      "GET",
      "POST",
      "OPTIONS"
     ],
     "AllowOrigins": [
      "*"
     ],
     "MaxAge": 3600
    },
    "Name": "msight-http-api",
    "ProtocolType": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/Resource"
   }
  },
  "MsightHttpApiDefaultStageE39A02A7": {
   "Type": "AWS::ApiGatewayV2::Stage",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "AutoDeploy": true,
    "StageName": "$default"
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/DefaultStage/Resource"
   }
  },
  "MsightHttpApiPOSTv1clientslocationupdateLocationLambdaIntegration40DF202E": {
   "Type": "AWS::ApiGatewayV2::Integration",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "IntegrationType": "AWS_PROXY",
    "IntegrationUri": {
     "Fn::GetAtt": [
      "LocationLambda0E7B39F0",
      "Arn"
     ]
    },
    "PayloadFormatVersion": "2.0"
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/POST--v1--clients--location--update/LocationLambdaIntegration/Resource"
   }
  },
  "MsightHttpApiPOSTv1clientslocationupdateLocationLambdaIntegrationPermissionB22A8620": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "LocationLambda0E7B39F0",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:162092913718:",
       {
        "Ref": "MsightHttpApiD0A50F1B"
       },
       "/*/*/v1/clients/location/update"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/POST--v1--clients--location--update/LocationLambdaIntegration-Permission"
   }
  },
  "MsightHttpApiPOSTv1clientslocationupdateEF5E2251": {
   "Type": "AWS::ApiGatewayV2::Route",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "AuthorizationType": "NONE",
    "RouteKey": "POST /v1/clients/location/update",
    "Target": {
     "Fn::Join": [
      "",
      [
       "integrations/",
       {
        "Ref": "MsightHttpApiPOSTv1clientslocationupdateLocationLambdaIntegration40DF202E"
       }
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/POST--v1--clients--location--update/Resource"
   }
  },
  "MsightHttpApiGETv1clientslocationhealthLocationLambdaIntegrationPermissionF5CC1F9E": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "LocationLambda0E7B39F0",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:162092913718:",
       {
        "Ref": "MsightHttpApiD0A50F1B"
       },
       "/*/*/v1/clients/location/health"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--v1--clients--location--health/LocationLambdaIntegration-Permission"
   }
  },
  "MsightHttpApiGETv1clientslocationhealthA2F8D238": {
   "Type": "AWS::ApiGatewayV2::Route",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "AuthorizationType": "NONE",
    "RouteKey": "GET /v1/clients/location/health",
    "Target": {
     "Fn::Join": [
      "",
      [
       "integrations/",
       {
        "Ref": "MsightHttpApiPOSTv1clientslocationupdateLocationLambdaIntegration40DF202E"
       }
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--v1--clients--location--health/Resource"
   }
  },
  "MsightHttpApiGETsystemopenapijsonSystemLambdaIntegrationBF08265C": {
   "Type": "AWS::ApiGatewayV2::Integration",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "IntegrationType": "AWS_PROXY",
    "IntegrationUri": {
     "Fn::GetAtt": [
      "SystemLambda52589B81",
      "Arn"
     ]
    },
    "PayloadFormatVersion": "2.0"
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--system--openapi.json/SystemLambdaIntegration/Resource"
   }
  },
  "MsightHttpApiGETsystemopenapijsonSystemLambdaIntegrationPermission2712F07C": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "SystemLambda52589B81",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:162092913718:",
       {
        "Ref": "MsightHttpApiD0A50F1B"
       },
       "/*/*/system/openapi.json"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--system--openapi.json/SystemLambdaIntegration-Permission"
   }
  },
  "MsightHttpApiGETsystemopenapijson8D5A7A67": {
   "Type": "AWS::ApiGatewayV2::Route",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "AuthorizationType": "NONE",
    "RouteKey": "GET /system/openapi.json",
    "Target": {
     "Fn::Join": [
      "",
      [
       "integrations/",
       {
        "Ref": "MsightHttpApiGETsystemopenapijsonSystemLambdaIntegrationBF08265C"
       }
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--system--openapi.json/Resource"
   }
  },
  "MsightHttpApiGETsystemhealthSystemLambdaIntegrationPermissionF8E02E1C": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "SystemLambda52589B81",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:162092913718:",
       {
        "Ref": "MsightHttpApiD0A50F1B"
       },
       "/*/*/system/health"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--system--health/SystemLambdaIntegration-Permission"
   }
  },
  "MsightHttpApiGETsystemhealth507A973A": {
   "Type": "AWS::ApiGatewayV2::Route",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "AuthorizationType": "NONE",
    "RouteKey": "GET /system/health",
    "Target": {
     "Fn::Join": [
      "",
      [
       "integrations/",
       {
        "Ref": "MsightHttpApiGETsystemopenapijsonSystemLambdaIntegrationBF08265C"
       }
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--system--health/Resource"
   }
  },
  "MsightHttpApiGETsystemversionSystemLambdaIntegrationPermission49519216": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "SystemLambda52589B81",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:162092913718:",
       {
        "Ref": "MsightHttpApiD0A50F1B"
       },
       "/*/*/system/version"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--system--version/SystemLambdaIntegration-Permission"
   }
  },
  "MsightHttpApiGETsystemversion56DE8EF5": {
   "Type": "AWS::ApiGatewayV2::Route",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "AuthorizationType": "NONE",
    "RouteKey": "GET /system/version",
    "Target": {
     "Fn::Join": [
      "",
      [
       "integrations/",
       {
        "Ref": "MsightHttpApiGETsystemopenapijsonSystemLambdaIntegrationBF08265C"
       }
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--system--version/Resource"
   }
  },
  "MsightHttpApiGETv1clientlatencyLatencyLambdaIntegrationEE739AE5": {
   "Type": "AWS::ApiGatewayV2::Integration",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "IntegrationType": "AWS_PROXY",
    "IntegrationUri": {
     "Fn::GetAtt": [
      "LatencyLambda7BA03A7D",
      "Arn"
     ]
    },
    "PayloadFormatVersion": "2.0"
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--v1--client--latency/LatencyLambdaIntegration/Resource"
   }
  },
  "MsightHttpApiGETv1clientlatencyLatencyLambdaIntegrationPermission3B50E1B6": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "LatencyLambda7BA03A7D",
      "Arn"
     ]
    },
    "Principal": "apigateway.amazonaws.com",
    "SourceArn": {
     "Fn::Join": [
      "",
      [
       "arn:aws:execute-api:us-east-2:162092913718:",
       {
        "Ref": "MsightHttpApiD0A50F1B"
       },
       "/*/*/v1/client/latency"
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--v1--client--latency/LatencyLambdaIntegration-Permission"
   }
  },
  "MsightHttpApiGETv1clientlatencyA27AF3BE": {
   "Type": "AWS::ApiGatewayV2::Route",
   "Properties": {
    "ApiId": {
     "Ref": "MsightHttpApiD0A50F1B"
    },
    "AuthorizationType": "NONE",
    "RouteKey": "GET /v1/client/latency",
    "Target": {
     "Fn::Join": [
      "",
      [
       "integrations/",
       {
        "Ref": "MsightHttpApiGETv1clientlatencyLatencyLambdaIntegrationEE739AE5"
       }
      ]
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/MsightHttpApi/GET--v1--client--latency/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/+1ZX2/bNhD/LNNjwWqbW/Qhb47TdsbSxrCzPMwwijN1VphQJMs/TlxB370gKcqyY29d0aJBViCByDve8XfH091RHuSDly/z336BO/OcFrfPOVvm9cwCvSVwZz7USAd5faXovM4quB9+MtlJ9iwjmQD7FizewSZRjFsKtCMpVqx0GiyTIjuZ15mACneWXG6UJ0zckjOaNeT4krGRHCwWX7ho0SzIaCWuJiMSlc/CunmdwRoYhyXjzG7+liLpWSs6LtoxZYU+5ZLetvMKVFQyVhfiHJyg19mJ1Q5JxtT61WhvORjDSjFW61fDotBozIUYaWy9kD0LFjwKFI8GyONAEUMmBoofTaWzeAlLjlv6ljY0RlIWFHSLyUSzNVj85sG2Am4egXt/wvgJ4yeM7w0jpKGxsKgFpsraFrN2NrQW6HWFwpIZUqeZ3bzV0ql57ZGmfTiXd0POL [...]
   },
   "Metadata": {
    "aws:cdk:path": "MsightCloudStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "HttpApiUrl": {
   "Value": {
    "Fn::GetAtt": [
     "MsightHttpApiD0A50F1B",
     "ApiEndpoint"
    ]
   }
  },
  "DbProxyEndpoint": {
   "Value": {
    "Fn::GetAtt": [
     "MsightProxyF785E2DA",
     "Endpoint"
    ]
   }
  },
  "DbSecretArn": {
   "Value": {
    "Ref": "MsightAuroraSecretAttachmentD585F689"
   }
  },
  "DbClusterArn": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "arn:aws:rds:us-east-2:162092913718:cluster:",
      {
       "Ref": "MsightAuroraE9D0FDC0"
      }
     ]
    ]
   }
  },
  "DbInitCommand": {
   "Description": "Run this command to initialize the database if this is the first deployment.",
   "Value": {
    "Fn::Join": [
     "",
     [
      "node tools/init-db.js --cluster-arn arn:aws:rds:us-east-2:162092913718:cluster:",
      {
       "Ref": "MsightAuroraE9D0FDC0"
      },
      " --secret-arn ",
      {
       "Ref": "MsightAuroraSecretAttachmentD585F689"
      },
      " --db-name msight --region us-east-2"
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
